--- a/index.html
+++ b/index.html
@@ -7,71 +7,110 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+
 <div class="progress-bar">
     <div class="progress" id="progress"></div>
 </div>
-    <div class="container">
-        <div id="clickCounter" class="counter">0</div>
-        <img src="img/settings.png" class="settings">
-        <img id="mute-button" src="img/volume.png" class="mute" onclick="toggleMute()">
-        <img class="mail" src="img/email.png">
-        <img id="planet_earth" class="planet_earth" src="img/planet-earth.png">
-
-
+<div class="container">
+    <img class="settings" src="img/settings.png">
+    <img class="mail" src="img/email.png">
+    <img class="mute" src="img/mute.png" id="mute-button" type="button"> <!-- Добавлен атрибут type="button" -->
+    <div id="clickCounter" class="counter">0</div>
+    <img id="planet_earth" class="planet_earth" src="img/planet-earth.png">
+</div>
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p class="modal_text">Settings</p>
     </div>
-    <script>
-        let counter = 0;
-        const targetClicks = 100;
-        const counterElement = document.getElementById('clickCounter');
-        const progressElement = document.getElementById('progress');
-        const planetEarth = document.querySelector('.planet_earth');
+</div>
+<audio id="click-sound" volume="0.5">
+    <source src="audio/click.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+<audio id="background-music" autoplay loop>
+    <source src="audio/Le-Calme-Ambient-Relaxing-Music-chosic.com_.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+<script>
+    const muteButton = document.getElementById('mute-button');
+    const backgroundMusic = document.getElementById('background-music');
 
+    // Установить по умолчанию, что звук не отключен
+    backgroundMusic.muted = false;
 
-        planetEarth.addEventListener('click', (event) => {
-            counter+=2;
-            if(counter>10){
-                const img = document.getElementById('planet_earth');
-                img.src = 'img/moon.png';
+    muteButton.addEventListener('click', () => {
+        // Изменение только свойства muted для звука фона
+        backgroundMusic.muted = !backgroundMusic.muted;
 
-            }
-            if(counter>20){
-                const img = document.getElementById('planet_earth');
-                img.src = 'img/mars-planet.png';
+        // Обновление изображения кнопки mute в зависимости от статуса звука
+        muteButton.src = backgroundMusic.muted ? 'img/mute.png' : 'img/unmuted.png';
+    });
+    const clickSound = document.getElementById('click-sound');
+    const planetEarth = document.querySelector('.planet_earth');
+    const counterElement = document.getElementById('clickCounter');
+    let counter = 0;
 
-            }
-            if(counter>30){
-                const img = document.getElementById('planet_earth');
-                img.src = 'img/planet-jupiter.png';
-            }
-            counterElement.textContent = `${counter} / ${targetClicks}`;
-            progressElement.style.width = `${(counter / targetClicks) * 100}%`;
-
-            const floatingNumber = document.createElement('div');
-            floatingNumber.textContent = '+2';
-            floatingNumber.classList.add('floating-number');
-            floatingNumber.style.left = `${event.clientX}px`;
-            floatingNumber.style.top = `${event.clientY}px`;
-            document.body.appendChild(floatingNumber);
-
-            setTimeout(() => {
-                floatingNumber.remove();
-            }, 1000);
-
-            // Изменяем цвет изображения на 1 секунду
-            planetEarth.classList.add('blue');
-            setTimeout(() => {
-                planetEarth.classList.remove('blue');
-            }, 1000);
-        });
-    </script>
-    <script>
-        function toggleMute() {
-            var audio = document.getElementById('background-music');
-            var muteButton = document.getElementById('mute-button');
-            audio.muted = !audio.muted;
-            muteButton.textContent = audio.muted ? 'Unmute' : 'Mute';
+    planetEarth.addEventListener('click', (event) => {
+        let increment = 0;
+        if (counter >= 100) {
+            increment = 4;
+        } else if (counter > 20) {
+            increment = 3;
+        } else {
+            increment = 2;
         }
-    </script>
+
+        counter += increment;
+
+        if (counter > 50) {
+            planetEarth.src = 'img/mars-planet.png';
+        } else if (counter > 20) {
+            planetEarth.src = 'img/moon.png';
+        }
+
+        if (counter > 100) {
+            planetEarth.src = 'img/planet-jupiter.png';
+        }
+
+        counterElement.textContent = `${counter}`; // Обновляем счетчик на странице
+
+        const floatingNumber = document.createElement('div');
+        floatingNumber.textContent = '+' + increment;
+        floatingNumber.classList.add('floating-number');
+        floatingNumber.style.left = `${event.clientX}px`;
+        floatingNumber.style.top = `${event.clientY}px`;
+        document.body.appendChild(floatingNumber);
+
+        setTimeout(() => {
+            floatingNumber.remove();
+        }, 1000);
+
+
+        planetEarth.classList.add('blue');
+        setTimeout(() => {
+            planetEarth.classList.remove('blue');
+        }, 1000);
+
+        clickSound.currentTime = 0; // Сбросить воспроизведение до начала
+        clickSound.play(); // Воспроизвести звук клика
+    });
+    var modal = document.getElementById("myModal");
+    var btn = document.querySelector(".settings");
+    var span = document.getElementsByClassName("close")[0];
+    btn.onclick = function() {
+        modal.style.display = "flex";
+    };
+    span.onclick = function() {
+        modal.style.display = "none";
+    };
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    };
+</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="index.js"></script>
 </body>
